--- a/WebApp/WebApp/Management/terms.html
+++ b/WebApp/WebApp/Management/terms.html
@@ -1,58 +1,50 @@
 ﻿
 <h1>End-User License Agreement ("Agreement")</h1>
+<code>
 
-<p>Last updated: May 23, 2018</p>
+    END USER LICENSE AGREEMENT
 
-<p>Please read this End-User License Agreement ("Agreement") carefully before clicking the "I Agree" button, downloading or using TastyMenu ("Application").</p>
+    This End-User License Agreement (this “EULA”) is a legal agreement between you (“Licensee”) and Yue Wang (“Licensor”), the author of TastyMenu, including all HTML files, XML files, Java files, graphics files, animation files, data files, technology, development tools, scripts and programs, both in object code and source code (the “Software”), the deliverables provided pursuant to this EULA, which may include associated media, printed materials, and “online” or electronic documentation.
 
-<p>By clicking the "I Agree" button, downloading or using the Application, you are agreeing to be bound by the terms and conditions of this Agreement.</p>
+    By installing, copying, or otherwise using the Software, Licensee agrees to be bound by the terms and conditions set forth in this EULA. If Licensee does not agree to the terms and conditions set forth in this EULA, then Licensee may not download, install, or use the Software.
 
-<p>This Agreement is a legal agreement between you (either an individual or a single entity) and TastyMenu and it governs your use of the Application made available to you by TastyMenu.</p>
+    1. Grant of License
 
-<p>If you do not agree to the terms of this Agreement, do not click on the "I Agree" button and do not download or use the Application.</p>
+    A) Scope of License. Subject to the terms of this EULA, Licensor hereby grants to Licensee a royalty-free, non-exclusive license to possess and to use a copy of the Software.
 
-<p>The Application is licensed, not sold, to you by TastyMenu for use strictly in accordance with the terms of this Agreement. This EULA  for TastyMenu is powered by <a href="https://termsfeed.com/">TermsFeed</a>.</p>
+    B) Installation and Use. Licensee may install and use an unlimited number of copies of the Software and make multiple back-up copies of the Software, solely for Licensee's business and personal use.
 
-<h2>License</h2>
+    2. Description of Rights and Limitations
 
-<p>TastyMenu grants you a revocable, non-exclusive, non-transferable, limited license to download, install and use the Application solely for your personal, non-commercial purposes strictly in accordance with the terms of this Agreement.</p>
+    A) Limitations. Licensee and third parties may not reverse engineer, decompile, or disassemble the Software, except and only to the extent that such activity is expressly permitted by applicable law notwithstanding the limitation.
 
-<h2>Third-Party Services</h2>
+    B) Update and Maintenance. Licensor shall provide updates and maintenance on the Software on an as needed basis.
 
-<p>The Application may display, include or make available third-party content (including data, information, applications and other products services) or provide links to third-party websites or services ("Third-Party Services").</p>
+    C) Separation of Components. The Software is licensed as a single product. Its components may not be separated for use on more than one computer.
 
-<p>You acknowledge and agree that TastyMenu shall not be responsible for any Third-Party Services, including their accuracy, completeness, timeliness, validity, copyright compliance, legality, decency, quality or any other aspect thereof. TastyMenu does not assume and shall not have any liability or responsibility to you or any other person or entity for any Third-Party Services.</p>
+    3. Title to Software. Licensor represents and warrants that it has the legal right to enter into and perform its obligations under this EULA, and that use by the Licensee of the Software, in accordance with the terms of this EULA, will not infringe upon the intellectual property rights of any third parties.
 
-<p>Third-Party Services and links thereto are provided solely as a convenience to you and you access and use them entirely at your own risk and subject to such third parties' terms and conditions.</p>
+    4. Intellectual Property. All now known or hereafter known tangible and intangible rights, title, interest, copyrights and moral rights in and to the Software, including but not limited to all images, photographs, animations, video, audio, music, text, data, computer code, algorithms, and information, are owned by Licensor. The Software is protected by all applicable copyright laws and international treaties.
 
-<h2>Term and Termination</h2>
+    5. No Support. Licensor has no obligation to provide support services for the Software.
 
-<p>This Agreement shall remain in effect until terminated by you or TastyMenu.</p>
+    6. Duration. This EULA is perpetual or until:
 
-<p>TastyMenu may, in its sole discretion, at any time and for any or no reason, suspend or terminate this Agreement with or without prior notice.</p>
+    A) Automatically terminated or suspended if Licensee fails to comply with any of the terms and conditions set forth in this EULA; or
 
-<p>This Agreement will terminate immediately, without prior notice from TastyMenu, in the event that you fail to comply with any provision of this Agreement. You may also terminate this Agreement by deleting the Application and all copies thereof from your mobile device or from your computer.</p>
+    B) Terminated or suspended by Licensor, with or without cause.
 
-<p>Upon termination of this Agreement, you shall cease all use of the Application and delete all copies of the Application from your mobile device or from your computer.</p>
+    In the event this EULA is terminated, you must cease use of the Software and destroy all copies of the Software.
 
-<p>Termination of this Agreement will not limit any of TastyMenu's rights or remedies at law or in equity in case of breach by you (during the term of this Agreement) of any of your obligations under the present Agreement.</p>
+    7. Jurisdiction. This EULA shall be deemed to have been made in, and shall be construed pursuant to the laws of the State of Washington, without regard to conflicts of laws provisions thereof. Any legal action or proceeding relating to this EULA shall be brought exclusively in courts located in Seattle, WA, and each party consents to the jurisdiction thereof. The prevailing party in any action to enforce this EULA shall be entitled to recover costs and expenses including, without limitation, attorneys’ fees. This EULA is made within the exclusive jurisdiction of the United States, and its jurisdiction shall supersede any other jurisdiction of either party’s election.
 
-<h2>Amendments to this Agreement</h2>
+    8. Severability.  No failure to exercise, and no delay in exercising, on the part of either party, any privilege, any power or any rights hereunder will operate as a waiver thereof, nor will any single or partial exercise of any right or power hereunder preclude further exercise of any other right hereunder. If any provision of this EULA shall be adjudged by any court of competent jurisdiction to be unenforceable or invalid, that provision shall be limited or eliminated to the minimum extent necessary so that this EULA shall otherwise remain in full force and effect and enforceable.
 
-<p>TastyMenu reserves the right, at its sole discretion, to modify or replace this Agreement at any time. If a revision is material we will provide at least 15 days' notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.</p>
+    9. WARRANTY DISCLAIMER. LICENSOR, AND AUTHOR OF THE SOFTWARE, HEREBY EXPRESSLY DISCLAIM ANY WARRANTY FOR THE SOFTWARE. THE SOFTWARE AND ANY RELATED DOCUMENTATION IS PROVIDED “AS IS” WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, OR NON-INFRINGEMENT. LICENSEE ACCEPTS ANY AND ALL RISK ARISING OUT OF USE OR PERFORMANCE OF THE SOFTWARE.
 
-<p>By continuing to access or use our Application after any revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, you are no longer authorized to use the Application.</p>
+    10. LIMITATION OF LIABILITY. LICENSOR SHALL NOT BE LIABLE TO LICENSEE, OR ANY OTHER PERSON OR ENTITY CLAIMING THROUGH LICENSEE ANY LOSS OF PROFITS, INCOME, SAVINGS, OR ANY OTHER CONSEQUENTIAL, INCIDENTAL, SPECIAL, PUNITIVE, DIRECT OR INDIRECT DAMAGE, WHETHER ARISING IN CONTRACT, TORT, WARRANTY, OR OTHERWISE. THESE LIMITATIONS SHALL APPLY REGARDLESS OF THE ESSENTIAL PURPOSE OF ANY LIMITED REMEDY. UNDER NO CIRCUMSTANCES SHALL LICENSOR’S AGGREGATE LIABILITY TO LICENSEE, OR ANY OTHER PERSON OR ENTITY CLAIMING THROUGH LICENSEE, EXCEED THE FINANCIAL AMOUNT ACTUALLY PAID BY LICENSEE TO LICENSOR FOR THE SOFTWARE.
 
-<h2>Governing Law</h2>
+    11. Entire Agreement. This EULA constitutes the entire agreement between Licensor and Licensee and supersedes all prior understandings of Licensor and Licensee, including any prior representation, statement, condition, or warranty with respect to the subject matter of this EULA.
 
-<p>The laws of California, United States, excluding its conflicts of law rules, shall govern this Agreement and your use of the Application. Your use of the Application may also be subject to other local, state, national, or international laws.</p>
 
-<h2>Contact Information</h2>
-
-<p>If you have any questions about this Agreement, please contact us.</p>
-
-<h2>Entire Agreement</h2>
-
-<p>The Agreement constitutes the entire agreement between you and TastyMenu regarding your use of the Application and supersedes all prior and contemporaneous written or oral agreements between you and TastyMenu.</p>
-
-<p>You may be subject to additional terms and conditions that apply when you use or purchase other TastyMenu's services, which TastyMenu will provide to you at the time of such use or purchase.</p>
+</code>
